# imeteo-stations

./: .dockerignore  .gitignore  CODEBASE_ANALYSIS.md  Dockerfile  LICENSE  OPTIMIZATION_GUIDE.md  QUICK_REFERENCE.md  README.md  RUST_OPTIMIZATION_ROADMAP.md  current_stations.json  docker-build.sh  find_missing_stations.py  plan-optimized.md  plan.md  prompt.md  pyproject.toml  weather_all.json
src/: __init__.py  fetcher.py  main.py  stations.py  time_utils.py  transformer.py
tests/: __init__.py  test_integration.py  test_stations.py  test_time_utils.py  test_transformer.py
